Ensure selection is visible on full-screen hover

--- a/styles/_colours.scss
+++ b/styles/_colours.scss
@@ -1,6 +1,6 @@
 $background-colour: #f7f7f7;
 $body-colour: #110e0b;
 $accent-colour: #e25300;
+$accent-alt-colour: #0072cf;
 $outline-colour: #f7b801;
 $visited-colour: #57305d;
-$figcaption-colour: #0072cf;
