--- a/styles/single.scss
+++ b/styles/single.scss
@@ -53,7 +53,7 @@ article {
     }
 
     figcaption {
-      color: $figcaption-colour;
+      color: $accent-alt-colour;
       margin-left: $body-padding;
       margin-right: $body-padding;
       margin-top: 1em;
